# nmatrix-generator

./: .CoqMakefile.d  .Forest.aux  .PowerSet.aux  .gitignore  Forest.glob  Forest.v  Forest.vo  PowerSet.glob  PowerSet.vo  README.md  _CoqProject
kearns/: dune-project
kearns/_build/: .db  .digest-db
kearns/_build/default/: rnkripke.install
kearns/_build/default.windows/: README.md
kearns/_build/default.windows/.dune/: configurator  configurator.v2
kearns/_build/default.windows/lib/.rnkripke.objs/: rnkripke.impl.all-deps  rnkripke.impl.d  rnkripke__Typecoercion.impl.all-deps
kearns/_build/default.windows/lib/.rnkripke.objs/byte/: rnkripke__.cmo  rnkripke__.cmt  rnkripke__Ast.cmt  rnkripke__Lexer.cmi  rnkripke__Model.cmt  rnkripke__Typecoercion.cmo
kearns/_build/default.windows/lib/.rnkripke.objs/native/: rnkripke__Kt4.cmx
kearns/_build/default.windows/lib/parser/: parser.mli
kearns/_build/default.windows/test/.test_rnkripke.eobjs/byte/: dune__exe__Test_rnkripke.cmti
kearns/_build/default/lib/: Rnkripke.cma  Rnkripke.cmxs  model.ml  rnkripke__.ml-gen
kearns/_build/default/lib/.Rnkripke.objs/: rnkripke__K45.impl.all-deps  rnkripke__Kd4.impl.d  rnkripke__Kt.impl.d
kearns/_build/default/lib/.Rnkripke.objs/byte/: rnkripke.cmo  rnkripke__K5.cmt  rnkripke__Kt.cmo  rnkripke__Ktb.cmt  rnkripke__Lexer.cmi  rnkripke__Lexer.cmo  rnkripke__Lexer.cmt  (+1 more)
kearns/_build/default/lib/parser/: lexer.mll  parser__mock.mli.inferred
kearns/_build/default/lib/theories/: kb45.ml  ktb.ml
kearns/lib/: dune  typecoercion.ml
kearns/lib/theories/: kt4.ml  kt45.ml
(+419 files in other folders)
